<resources>
    <string name="app_name">mainactivity</string>
    <string name="names">Name</string>
    <string name="account">Name</string>
    <string name="password">Password</string>
    <string name="users">Username</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="signIn">Button</string>
    <string name="logIn">Log In</string>
    <string name="username">Username</string>
    <string name="princess_photo">Princess Photo</string>
    <string name="puzzleMazing">Puzzle Mazing</string>
    <string name="log_out">Log Out</string>
    <string name="crazyMatchGameIcon">Crazy Match Game Icon</string>
    <string name="chessGameIcon">Chess Game Icon</string>
    <string name="chess">Chess</string>
    <string name="word">word</string>
    <string name="crazyMatch">Crazy Match</string>
    <string name="guessWord">Guess Word</string>
    <string name="menuBackgroundNight">Menu Background: Night</string>
    <string name="knight">Knight</string>
    <string name="princeAli">Prince Ali</string>
    <string name="king">King</string>
    <string name="signUp">Sign Up</string>
    <string name="createAccount">Create Account</string>
    <string name="princePaul">Prince Paul</string>
    <string name="nickName">Nick Name</string>
    <string name="crownIcon">Crown Icon</string>
    <string name="selectTargetToRescue">Please select the target you want to rescue</string>
    <string name="rule">Rule</string>
    <string name="newGame">newgame</string>
    <string name="back">back</string>
    <string name="loadGame">loadgame</string>
    <string name="restart">restart</string>
    <string name="nextLevel">nextlevel</string>
    <string name= "score">score</string>
    <string name="timeRemaining">time_remaining</string>
    <string name="background">background</string>
    <string name="start">start</string>
    <string name="backToMainPage">back_to_main_page</string>
    <string name="submit">submit</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome</string>
    <string name="signUpFail">Did not sign up successfully!</string>
    <string name="invalidInput">The input is invalid!</string>
    <string name="wrongPassword">The password is wrong!</string>
    <string name="str_movebox_game">BusyWorker</string>
    <string name="str_start_game">START</string>
    <string name="str_exit_game">EXIT</string>
    <string name="select_level">LEVEL</string>
    <string name="what_you_select">WHAT_YOU_SELECT：</string>
    <string name="txt_game_over">CONGRATS</string>
</resources>
