<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activities.MainMenuActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="288dp"
        android:layout_height="59dp"
        android:layout_marginStart="187dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="16dp"
        android:text="@string/puzzleMazing"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#246DAC"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout"
        style="@android:style/Widget.DeviceDefault.Button.Small"
        android:layout_width="119dp"
        android:layout_height="49dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="112dp"
        android:background="@drawable/buttonshape"
        android:text="@string/log_out"
        android:textColor="#0055D4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/crazymatch"
        android:layout_width="120dp"
        android:layout_height="91dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/crazyMatchGameIcon"
        app:layout_constraintBottom_toTopOf="@+id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/planet" />

    <ImageView
        android:id="@+id/chess"
        android:layout_width="120dp"
        android:layout_height="91dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/chessGameIcon"
        app:layout_constraintBottom_toTopOf="@+id/text_crazy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/chess" />

    <TextView
        android:id="@+id/chess_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="231dp"
        android:layout_marginEnd="144dp"
        android:text="@string/chess"
        android:textColor="#000407"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/chess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/wordguess"
        android:layout_width="120dp"
        android:layout_height="91dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="7dp"
        android:contentDescription="@string/word"
        app:layout_constraintBottom_toTopOf="@+id/chess_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/guess" />

    <TextView
        android:id="@+id/text_crazy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="231dp"
        android:layout_marginEnd="144dp"
        android:text="@string/crazyMatch"
        android:textColor="#F44336"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/crazymatch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="14dp"
        android:text="@string/guessWord"
        android:textColor="#009688"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/wordguess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.916" />

    <Switch
        android:id="@+id/background"
        android:layout_width="349dp"
        android:layout_height="49dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#00180101"
        android:buttonTint="#160202"
        android:checked="true"
        android:foregroundTint="#250101"
        android:showText="false"
        android:text="@string/menuBackgroundNight"
        android:textColor="#161515"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        android:theme="@style/SCBSwitch"
        android:thumbTint="#00FAF2F2"
        android:trackTint="#C01E1E"
        app:layout_constraintBottom_toTopOf="@+id/word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:checked="false" />

</androidx.constraintlayout.widget.ConstraintLayout>