<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="145dp"
        android:text="@string/register"
        android:textColor="#fff"
        android:textSize="20sp"

        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59sp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="240dp"
        android:autofillHints=""
        android:background="#2e5cb8"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:textColorHint = "#fff"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="45sp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="85dp"
        android:background="#4C7DCA"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:textColorHint = "#fff"
        android:hint="@string/users"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_below="@id/user"

        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="51dp"
        app:cardElevation ="10dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="129dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="22sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>